feat(chart): moviemeter
